--- a/.github/workflows/testim_github_action.yml
+++ b/.github/workflows/testim_github_action.yml
@@ -7,8 +7,8 @@ jobs:
         steps:
             - uses: actions/checkout@v2
             - uses: actions/setup-node@v4
-              with:
-                node-version: 'lts'
+              #with:
+                #node-version: 'lts'
                 # You can also change 'lts' to any supported LTS Node.js version.
             - run: npm install -g @testim/testim-cli
             - run: testim --token "onlfP7MDMyaYPkpYBoRjqhmv8lIbTRTqAdwJrYf4u4Hkyd383N" --project "nKGi7CBJylaVVp7nSVJ3" --grid "Testim-Grid" --suite "SmokeTest" --timeout 300000
